[tool.poetry]
name = "unlikelyhood_training"
version = "0.1.0"
description = ""
authors = ["pavel.burnysheff@yandex.ru <pavel.burnysheff@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.10.0"
transformers = "^4.11.3"
wandb = "^0.12.5"
jupyterlab = "^3.2.1"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
pandas = "^1.3.4"
entmax = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
